[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mocca2"
version = "0.0.1"
authors = [
  { name="Jan Oboril", email="jan.oboril@gmail.com" },
]
description = "MOCCA2 is an open-source Python project to analyze HPLC-DAD raw data"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'numpy > 1.20',
  'scipy > 1.10',
  'scikit-learn > 1.3',
  'pyyaml > 6.0',
  'pandas > 2.1',
  'matplotlib > 3.6',
  'pyarrow > 15.0'
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"